Fix error in line spacing for katex.

--- a/src/components/Article/Article.scss
+++ b/src/components/Article/Article.scss
@@ -32,7 +32,7 @@
     font-size: 0.8em;
   }
   .katex {
-    font-size: 1.2rem;
+    font-size: 1.2em;
     line-height: 1.45;
   }
 
